--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -30,7 +30,7 @@
     <script src="//cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     
     <meta name="defaultLanguage" content="en-US">
-    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es, sr">
+    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es, sr, pt-BR, tr">
     <link rel="localization" href="/locales/app.{locale}.ftl">
     <script src="/js/l20n.min.js"></script>
 
