--- a/webroot/index.html
+++ b/webroot/index.html
@@ -113,15 +113,18 @@
                 <div class="info-box">
                   <p>
                     <ul>
-                      <li><h4>Talks</h4></li>
+                      <li><h4>Talks and Papers</h4></li>
                        <li>A
                         <a href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE on Proofs of Space and Verifiable Delay Functions.</li>
+
                       <li data-l10n-id="recent-talk">A
                         <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with
                         <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>.</li>
                       <li data-l10n-id="older-talk">An
                         <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk</a> with
                         <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
+                        <li data-l10n-id="tech-paper-link">A very
+                        <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.</li>
                       
                     </ul>
                   </p>
@@ -131,11 +134,10 @@
                 <div class="info-box">
                   <p>
                     <ul>
-                      <li><h4>Whitepapers</h4></li>
+                      <li><h4>News and Information</h4></li>
                       
-                      <li data-l10n-id="tech-paper-link">A very
-                        <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.</li>
-                       <li data-l10n-id="faq-link"><a href="faq/">Frequently Asked Questions (FAQ)</a></li>
+                       <li data-l10n-id="news-link">Follow the latest articles in the <a href="news/">News</a>section.</li>
+                       <li data-l10n-id="faq-link">Visit our <a href="faq/">Frequently Asked Questions (FAQ)</a>to learn more!</li>
                     </ul>
                   </p>
                 </div>
