--- a/webroot/index.html
+++ b/webroot/index.html
@@ -110,21 +110,21 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-2"></div>
+              <div class="col-1"></div>
               <div class="col">
                 <div class="info-box">
                   <p>
                     <ul>
                       <li><h4>Talks and Papers</h4></li>
                        <li>Bram Cohen giving a
-                        <a href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE on Proofs of Space.</li>
+                        <a href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 on Proofs of Space.</li>
                         <li>Ben Fisch giving a
-                        <a href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE on Verifiable Delay Functions.</li>
-                      <li data-l10n-id="recent-talk">Bram's
-                        <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk at Berkeley</a> (starts about 20:00) with
+                        <a href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE 2018 on Verifiable Delay Functions.</li>
+                      <li data-l10n-id="recent-talk">Bram Cohen's
+                        <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">talk at Blockchain at Berkeley</a> (starts about 20:00) with
                         <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>.</li>
-                      <li data-l10n-id="older-talk">Bram's
-                        <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk at BPASE 2017</a> with
+                      <li data-l10n-id="older-talk">Bram Cohen's
+                        <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">talk at BPASE 2017</a> with
                         <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
                         <li data-l10n-id="tech-paper-link">A very
                         <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.</li>
@@ -145,7 +145,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-2"></div>
+              <div class="col-1"></div>
             </div>
           </div>
 
