--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -72,7 +72,7 @@
         </div>
       </header-->
 
-      <div id="markdown-container" class="wrap container-fluid doc" >        
+      <div id="markdown-container" class="wrap container-fluid" >        
          <div class="row">
             <div class="col">
               <h3 class="chiafaq">Frequently Asked Questions</h3>
