--- a/webroot/index.html
+++ b/webroot/index.html
@@ -110,22 +110,30 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-1"></div>
               <div class="col">
                 <div class="info-box">
                   <p>
                     <ul>
                       <li><h4>Talks and Papers</h4></li>
                        <li>Bram Cohen giving a
-                        <a href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space. </li>
+                        <a target="blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space. </li>
+                        <li data-l10n-id="james-talk">James Prestwich giving a 
+                        <a target="blank" href="https://www.youtube.com/watch?v=xe5d-Fn1yoo&feature=youtu.be">talk </a> at SF Cryptocurrency Devs Seminar about Chia Script and BLS Signatures with
+                        <a target="blank" href="https://drive.google.com/file/d/16DFxhEF9VeQvtURmkPtOHZyhOAHyAMCW/view">slides</a>.</li>
                         <li>Ben Fisch giving a
-                        <a href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE 2018 on Verifiable Delay Functions.</li>
+                        <a target="blank" href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE 2018 on Verifiable Delay Functions.</li>
                       <li data-l10n-id="recent-talk">Bram Cohen's
-                        <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">talk at Blockchain at Berkeley</a> (starts about 20:00) with
-                        <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>.</li>
+                        <a target="blank" href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">talk at Blockchain at Berkeley</a> (starts about 20:00) with
+                        <a target="blank" href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>.</li>
                       <li data-l10n-id="older-talk">Bram Cohen's
-                        <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">talk at BPASE 2017</a> with
-                        <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
+                        <a target="blank" href="https://www.youtube.com/watch?v=aYG0NxoG7yw">talk at BPASE 2017</a> with
+                        <a target="blank" href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
+
+                         <li >Bram Cohen giving a
+                        <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk</a> at SF Bitcoin Devs Seminar about data structures for scalling Bitcoin with <a target="blank" href="https://drive.google.com/file/d/0BwQpYqkQqA9cc0N4SlN2M05MS1RRRy1vZV9tZEE2VC1ZdUh3/view">slides</a>.</li>
+
+                        <li >Bram Cohen giving a
+                        <a target="blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk </a>at SF Bitcoin Devs Seminar about removing waste from cryptocurrencies.</li>
                       
                     </ul>
                   </p>
@@ -143,7 +151,6 @@
                   </p>
                 </div>
               </div>
-              <div class="col-1"></div>
             </div>
           </div>
 
